<resources>
    <string name="app_name">Fidas</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Hospital</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="nav_header_subtitle_unit">unit</string>
    <string name="main">Main</string>
    <string name="about_text1">
        Fidas Application is a way for healthcare professionals to follow-up their in-patients who are admitted in different hospitals across Kuwait. It aims at consuming technology to keep everything documented and easily retrieved in order to improve care for our patients.
    </string>
    <string name="about_text2">
        We are happy to provide any hospital in Kuwait with the server files in case they want the database to be stored in their local hospital server.
    </string>
    <string name="menu_location_finder">Medicine Finder</string>
    <string name="logout_from_admin_activity">back</string>

    <string-array name="pharmacies">
        <item>Central Pharmacy</item>
        <item>Injection Store</item>
    </string-array>
    <string-array name="locations">
        <item>location1</item>
        <item>location2</item>
        <item>location3</item>
        <item>location4</item>
    </string-array>
    <string-array name="code1">
        <item></item>
        <item>BF</item>
        <item>SF</item>
        <item>CP</item>
        <item>SH</item>
    </string-array>
    <string-array name="code2">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="code3">
        <item></item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="delete_report">Delete Report</string>
    <string name="loading">Loading...</string>
</resources>