<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_home"
            android:icon="@drawable/ic_list_bulleted"
            android:title="@string/main"
            />
        <item
            android:id="@+id/nav_location_finder"
            android:icon="@drawable/ic_baseline_near_me_24"
            android:title="@string/menu_location_finder"
            />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_mail_24"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_outline"
            android:title="@string/about_us" />

    </group>
</menu>