<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fidas_logo"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        />
    <View style="@style/Divider.Horizontal"/>
    <EditText
        android:id="@+id/username_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/text_edit_drawable"
        android:textSize="25sp"
        android:hint="@string/Username"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/password_text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/text_edit_drawable"
        android:textSize="25sp"
        android:hint="@string/Password"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:text="@string/sign_in"
        />
    <View style="@style/Divider.Horizontal"/>
    <LinearLayout
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
        <TextView
            android:id="@+id/forget_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Did you forget the password? "
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

</LinearLayout>